--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <html>
-<p><a href="Bite.png">Click Here For PDF</a></p>
+<p><a href="https://github.com/bubblybubbubbles/sauce/blob/main/Bite.png">Click Here For PDF</a></p>
 </html>
